// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemedIconText Render & Snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    role="group"
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "gap": 10,
        },
      ]
    }
  >
    <icon
      color="#7ccf6b"
      name="check"
      size={30}
      style={
        [
          {},
        ]
      }
    />
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#000501",
            "fontSize": 20,
            "lineHeight": 24,
          },
        ]
      }
    >
      Icon Text
    </Text>
  </View>
</View>
`;

exports[`ThemedIconText Render with flip 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    role="group"
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "gap": 10,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#000501",
            "fontSize": 20,
            "lineHeight": 24,
          },
        ]
      }
    >
      Flipped Text
    </Text>
    <icon
      color="#7ccf6b"
      name="check"
      size={30}
      style={
        [
          {},
        ]
      }
    />
  </View>
</View>
`;

exports[`ThemedText Render & Snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#000501",
          "fontSize": 20,
          "lineHeight": 24,
        },
      ]
    }
  >
    Test Text
  </Text>
</View>
`;
